dags merging/splitting perfectly
